Bug 1711111 - Text in Tracking Protection milestone notification is off-center r=desktop-theme-reviewers,harry
Differential Revision: https://phabricator.services.mozilla.com/D115258

--- a/browser/themes/shared/browser.inc.css
+++ b/browser/themes/shared/browser.inc.css
@@ -493,10 +493,13 @@ menupopup::part(drop-indicator) {
   float: inline-end;
   background-color: transparent;
   flex-direction: row-reverse;
+  /* Override proton-doorhanger default styles that increase the size of the button */
+  margin: 0;
 }
 
 #contextual-feature-recommendation-notification[data-notification-bucket="CFR_MILESTONE_MESSAGE"] .popup-notification-button.popup-notification-primary-button {
   background-color: rgba(216, 216, 216, 0.2);
+  color: white;
   border: none;
   border-radius: 2px;
   margin: 4px;
